--- a/conf/opt/graphite/conf/storage-schemas.conf
+++ b/conf/opt/graphite/conf/storage-schemas.conf
@@ -8,10 +8,10 @@
 # Carbon's internal metrics. This entry should match what is specified in
 # CARBON_METRIC_PREFIX and CARBON_METRIC_INTERVAL settings
 
-[default_1min_for_1day]
-pattern = .*
-retentions = 1m:7d
+[carbon]
+pattern = ^carbon\.
+retentions = 60:90d
 
-[production_staging]
-pattern = ^(PRODUCTION|STAGING).*
+[default_1min_for_365days]
+pattern = ^attacks\.
 retentions = 1m:365d
